Remove console logs, fix main file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "winston-slack-webapi-transport",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A Slack transport for Winston 3+ that logs to a channel via webapi and api token.",
-  "main": "index.js",
+  "main": "./src/slackTransport.js",
   "scripts": {
     "test": "jest"
   },
